samples/_failures_safe/1761543096_a9994e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a4b70b6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3a4b70b6.c:151: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_3a4b70b6.c:150:9: error: expected declaration or statement at end of input
  150 |         if
      |         ^~
./samples/SAFE/__tmp_3a4b70b6.c:150:9: error: expected declaration or statement at end of input
